--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 	<link rel="stylesheet" href="css/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="before-load">
+	<div class="loading">
+		<svg class="loading-circle">
+			<circle cx="50%" cy="50%" r=25>
+			</circle>
+		</svg>
+	</div>
 	<div class="container">
 		<nav class="global-nav">
 			<div class="global-nav-links">
@@ -87,6 +93,7 @@
 		</section>
 		<footer class="footer">
 			2020, 하이코딩
+
 		</footer>
 	</div>
 
